feat(index): 新增json配置

--- a/package.json
+++ b/package.json
@@ -4,7 +4,23 @@
   "description": "ADS的js eslint配置",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ext .js,.vue,.json lib",
+    "lint:fix": "eslint --ext .js,.vue,.json lib --fix",
+    "docs": "ads-doc",
+    "commit": "git add . && git cz",
+    "postversion": "npm run changelog",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
+    "postchangelog": "git add . && git commit -m \"docs(changelog): 更新CHANGELOG\""
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "commit-msg": "commitlint -e $GIT_PARAMS",
+    "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+  },
+  "lint-staged": {
+    "**/*.{js,json}": [
+      "eslint --fix"
+    ]
   },
   "repository": {
     "type": "git",
@@ -25,7 +41,18 @@
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-jsdoc": "^35.0.0",
+    "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1"
+  },
+  "devDependencies": {
+    "@ads/cli-plugin-doc": "^1.0.6",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "commitizen": "^4.2.4",
+    "conventional-changelog": "^3.1.24",
+    "cz-conventional-changelog-zh": "^0.0.2",
+    "lint-staged": "^11.0.0",
+    "yorkie": "^2.0.0"
   }
 }
