--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ads/eslint-config-js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "ADS的js eslint配置",
   "main": "lib/index.js",
   "scripts": {
@@ -51,6 +51,7 @@
     "@commitlint/config-conventional": "^12.1.4",
     "commitizen": "^4.2.4",
     "conventional-changelog": "^3.1.24",
+    "conventional-changelog-cli": "^2.1.1",
     "cz-conventional-changelog-zh": "^0.0.2",
     "lint-staged": "^11.0.0",
     "yorkie": "^2.0.0"
