--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .js,.vue,.json lib",
     "lint:fix": "eslint --ext .js,.vue,.json lib --fix",
     "docs": "ads-doc",
-    "commit": "git add . && git cz",
+    "commit": "git add . && git commit --no-edit",
     "postversion": "npm run changelog",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "postchangelog": "git add . && git commit -m \"docs(changelog): 更新CHANGELOG\""
