--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "json",
         "jsonc",
         "json5",
-        "czrc"
+        "czrc",
+        "md"
     ],
     "emmet.syntaxProfiles": {
         "czrc":"json"
