--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "ADS的js eslint配置",
   "main": "lib/index.js",
   "scripts": {
-    "lint": "eslint --ext .js,.vue,.json,md lib",
-    "lint:fix": "eslint --ext .js,.vue,.json,md lib --fix",
+    "lint": "eslint --ext .js,.vue,.json,.md lib",
+    "lint:fix": "eslint --ext .js,.vue,.json,.md lib --fix",
     "docs": "ads-doc",
     "commit": "git add . && git commit --no-edit",
     "postversion": "npm run changelog",
