--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@ads/eslint-config-js",
-  "version": "1.0.5",
-  "description": "ADS的js eslint配置",
+  "name": "@agds/eslint-config-js",
+  "version": "1.0.0",
+  "description": "agds的js eslint配置",
   "main": "lib/index.js",
   "scripts": {
     "lint": "eslint --ext .js,.vue,.json,.md lib",
     "lint:fix": "eslint --ext .js,.vue,.json,.md lib --fix",
-    "docs": "ads-doc",
+    "docs": "agds-doc",
     "commit": "git add . && git commit --no-edit",
     "postversion": "npm run changelog",
     "prepublishOnly": "npm run docs && (git add . && git commit -m \"docs(readme): 更新文档\" || true)",
@@ -16,7 +16,7 @@
   "gitHooks": {
     "pre-commit": "lint-staged",
     "commit-msg": "commitlint -e $GIT_PARAMS",
-    "prepare-commit-msg": "ads-gc-has-msg && exec < /dev/tty && git cz --hook || true"
+    "prepare-commit-msg": "agds-gc-has-msg && exec < /dev/tty && git cz --hook || true"
   },
   "lint-staged": {
     "**/*.{js,json,md}": [
@@ -29,7 +29,7 @@
   },
   "keywords": [
     "eslint",
-    "ads",
+    "agds",
     "config",
     "js"
   ],
@@ -47,8 +47,8 @@
     "eslint-plugin-promise": "^4.3.1"
   },
   "devDependencies": {
-    "@ads/cli-plugin-doc": "^1.0.8",
-    "@ads/node-utils": "^1.0.13",
+    "@agds/cli-plugin-doc": "^1.0.0",
+    "@agds/node-utils": "^1.0.0",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "commitizen": "^4.2.4",
